8311556: GetThreadLocalStorage not working for vthreads mounted during JVMTI attach

Reviewed-by: amenkov
Backport-of: 11a5115caf179a1bbed5311e12ed3851e026c5c5